--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <title>
         <? DuniaCoder🚀 />
     </title>
-    <meta name="description" content="">
+    <meta id="browser-color" name="theme-color" content="" />
+    <meta name="description" content="Duniacoder adalah web yang dibuat karena kurang kerjaan, dibuat SPA biar bingung yang pake, h3h3h3h3h3 lur">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
@@ -32,7 +33,6 @@
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-
     <section class="hero is-dark is-bold is-fullheight" id="Hero">
         <div class="hero-body">
             <div class="container">
@@ -84,82 +84,86 @@
                         </h2>
                         <a class="button1" style="border-color: #FFF; color: #FFF;" id="ButtonLanjut">Lanjut Boss</a>
                     </div>
-                    <div class="column" id="Carousel">
-                        <div class="owl-carousel owl-theme owl-loaded">
-                            <div class="owl-stage-outer">
-                                <div class="owl-stage">
-                                    <div class="owl-item">
-                                        <figure class="image is-square">
-                                            <img src="assets/external-content.duckduckgo.com.jpeg">
-                                        </figure>
-                                    </div>
-                                    <div class="owl-item">
-                                        <figure class="image is-square">
-                                            <img src="assets/1.jpeg">
-                                        </figure>
-                                    </div>
-                                    <div class="owl-item">
-                                        <figure class="image is-square">
-                                            <img src="assets/13.jpeg">
-                                        </figure>
-                                    </div>
-                                    <div class="owl-item">
-                                        <figure class="image is-square">
-                                            <img src="assets/14.jpeg">
-                                        </figure>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
                 </div>
         </div>
     </section>
 
-    <section class="hero is-info is-bold is-fullheight" id="Hero3">
+    <section class="hero is-link is-bold is-fullheight" id="Hero3">
         <div class="hero-body">
             <div class="container">
                 <h1 class="title">
                     Apa Yang Kami Kerjakan? 🤔
                 </h1>
                 <h2 class="subtitle">
-                    Yang Kami kerjakan selama 3 bulan ini aneka ragam, Dari membersihkan virus, Perpustakaan, Lab RPL, Menata
+                    Yang Kami kerjakan selama 3 bulan ini aneka ragam, Dari membersihkan virus, Perpustakaan, Lab RPL,
+                    Menata
                     Jaringan
-                    Sekolah, Tidur Di Perpustakaan, Membuat Kepala Sekolah Marah, Membuat Koneksi Sekolah Menjadi lemot. Kami Juga
+                    Sekolah, Tidur Di Perpustakaan, Membuat Kepala Sekolah Marah, Membuat Koneksi Sekolah Menjadi lemot.
+                    Kami Juga
                     menerima Reparasi PC Bagi yang minat hubungi MR. Dan yang paling serius adalah debat ingin makan apa.
                 </h2>
-                <a class="button1" style="border-color: #fff; color: #fff;" id="ButtonCarousel">Kepusingan Kami</a>
-                <br>
-                <div class="owl-carousel owl-theme owl-loaded" id="Carousel2">
-                    <div class="owl-stage-outer">
-                        <div class="owl-stage">
-                            <div class="owl-item">
-                                <figure class="image is-square">
-                                    <img src="assets/external-content.duckduckgo.com.jpeg">
-                                </figure>
-                            </div>
-                            <div class="owl-item">
-                                <figure class="image is-square">
-                                    <img src="assets/1.jpeg">
-                                </figure>
-                            </div>
-                            <div class="owl-item">
-                                <figure class="image is-square">
-                                    <img src="assets/13.jpeg">
-                                </figure>
-                            </div>
-                            <div class="owl-item">
-                                <figure class="image is-square">
-                                    <img src="assets/14.jpeg">
-                                </figure>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <a class="button1" style="border-color: #fff; color: #fff;" id="ButtonLanjut2">TAREK MAMANK!!!!</a>
+                <a class="button1" style="border-color: #fff; color: #fff;" id="ButtonLanjut12">Kepusingan Kami</a>
             </div>
+        </div>
     </section>
+
+    <section class="section has-background-warning" id="Hero6">
+        <h2 class="title has-text-centered has-text-dark">Galeri Kami</h2>
+        <br>
+        <div class="columns is-multiline">
+            <div class="column is-4">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+            <div class="column is-4">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+            <div class="column is-4">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+            <div class="column is-6">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+            <div class="column is-6">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+            <div class="column is-12">
+                <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=000000" alt="">
+            </div>
+        </div>
+        <br>
+        <div class="has-text-centered">
+            <a class="button1" style="border-color: #000; color: #000;" id="ButtonLanjut0">TAREK MAMANK!!!!</a>
+        </div>
+    </section>
+
+    <section class="section has-background-dark" id="Hero7">
+            <h2 class="title has-text-centered has-text-light">Yang Kami Kerjakan</h2>
+            <br>
+            <div class="columns is-multiline">
+                <div class="column is-4">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+                <div class="column is-4">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+                <div class="column is-4">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+                <div class="column is-6">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+                <div class="column is-6">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+                <div class="column is-12">
+                    <img src="https://bulma.dev/placeholder/pictures/bg_4-3.svg?primary=fff" alt="">
+                </div>
+            </div>
+            <br>
+            <div class="has-text-centered">
+                <a class="button1" style="border-color: #fff; color: #fff;" id="ButtonLanjut13">Lanjut</a>
+            </div>
+        </section>
 
     <section class="hero is-danger is-bold is-fullheight" id="Hero4">
         <div class="hero-body">
@@ -193,7 +197,7 @@
                     Halo?, Sehat? 😄
                 </h1>
                 <h1 class="subtitle">
-                    Hai Saya Bismantaka Aldila Selaku developer web ini, sebenarnya masih ada 4 teman saya yang men-Develop web ini, namun mereka belum membuat tampilanya 😄.
+                    Hai Saya<strong>Bismantaka Aldila</strong> Selaku developer web ini, sebenarnya masih ada 4 teman saya yang men-Develop web ini, namun mereka belum membuat tampilanya 😄.
                     Saya membuat web ini dengan prinsip SPA(Single Page Application) Agar ringan saat Loading web ini, saya tidak menggunakan javascript yang membingungkan namun akan terlihat membingungkan untuk teman-teman saya
                 </h1>
                 <a href="https://bistaka.github.io" class="button1" style="border-color: #fff; color: #fff;">Web Saya</a>
@@ -201,9 +205,18 @@
         </div>
     </section>
 
+    <footer class="footer has-background-dark has-text-light" id="HeroFooter">
+        <div class="content has-text-centered has-text-light">
+            <p class="has-text-light">
+                DuniaCoder.com by <a href="https://bistaka.github.io">Bismantaka Aldila</a>. The source code is licensed
+                <a href="http://opensource.org/licenses/mit-license.php">MIT</a>. The website content
+                is licensed <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY NC SA 4.0</a>.
+            </p>
+        </div>
+    </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11/lib/typed.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/owl.carousel@2.3.4/dist/owl.carousel.min.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="assets/backup.js"></script>
 </body>
 
 </html>
