--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <link href="https://fonts.googleapis.com/css?family=Saira+Stencil+One&display=swap" rel="stylesheet">
 </head>
 
-<body style="background-color: grey;">
+<body class="bg-custom">
     <noscript>PLEASE TURN ON JAVASCRIPT/NYALAIN JAVASCRIPT-NYA PAN8</noscript>
     <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
@@ -42,7 +42,7 @@
                 </h1>
                 <br>
                 <div class="has-text-centered" id="Button-kenal">
-                    <a class="button1 is-info animated infinite bounce delay-3s">Kenalan Yuk!</a>
+                    <a class="button1 is-info animated infinite bounce delay-3s" style="background-color: white;">Kenalan Yuk!</a>
                 </div>
             </div>
         </div>
@@ -184,18 +184,18 @@
         </div>
     </section>
 
-    <section class="hero is-info is-bold is-fullheight" id="Hero5">
+    <section class="hero is-info is-fullheight bg-custom" id="Hero5">
         <div class="hero-body">
-            <div class="container">
+            <div class="box container">
                 <figure class="image is-128x128">
                     <img class="is-rounded" src="https://avatars1.githubusercontent.com/u/32157093?v=4">
                 </figure>
                 <br>
-                <h1 class="title">
+                <h1 class="title has-text-dark">
                     Halo?, Sehat? 😄
                 </h1>
-                <h1 class="subtitle">
-                    Hai Saya<strong>Bismantaka Aldila</strong> Selaku developer web ini, sebenarnya masih ada 4 teman saya yang men-Develop web ini, namun mereka belum membuat tampilanya 😄.
+                <h1 class="subtitle has-text-dark">
+                    Hai Saya<strong style="color: black;"> Bismantaka Aldila</strong> Selaku developer web ini, sebenarnya masih ada 4 teman saya yang men-Develop web ini, namun mereka belum membuat tampilanya 😄.
                     Saya membuat web ini dengan prinsip SPA(Single Page Application) Agar ringan saat Loading web ini, saya tidak menggunakan javascript yang membingungkan namun akan terlihat membingungkan untuk teman-teman saya
                 </h1>
                 <a href="https://bistaka.github.io" class="button1" style="border-color: #fff; color: #fff;">Web Saya</a>
