--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                     Hai Saya<strong style="color: black;"> Bismantaka Aldila</strong> Selaku developer web ini, sebenarnya masih ada 4 teman saya yang men-Develop web ini, namun mereka belum membuat tampilanya 😄.
                     Saya membuat web ini dengan prinsip SPA(Single Page Application) Agar ringan saat Loading web ini, saya tidak menggunakan javascript yang membingungkan namun akan terlihat membingungkan untuk teman-teman saya
                 </h1>
-                <a href="https://bistaka.github.io" class="button1" style="border-color: #fff; color: #fff;">Web Saya</a>
+                <a href="https://bistaka.github.io" class="button1" style="border-color: #000; color: #000;">Web Saya</a>
             </div>
         </div>
     </section>
