--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11/lib/typed.min.js"></script>
-    <script src="assets/app.js"></script>
+    <script src="assets/backup.js"></script>
 </body>
 
 </html>
