--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>
         <? DuniaCoder🚀 />
     </title>
-    <meta id="browser-color" name="theme-color" content="" />
+    <meta name="theme-color" content="" />
     <meta name="description" content="Duniacoder adalah web yang dibuat karena kurang kerjaan, dibuat SPA biar bingung yang pake, h3h3h3h3h3 lur">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
