--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         <? DuniaCoder🚀 />
     </title>
     <meta name="theme-color" content="" />
-    <meta name="description" content="Duniacoder adalah web yang dibuat karena kurang kerjaan, dibuat SPA biar bingung yang pake, h3h3h3h3h3 lur">
+    <meta name="description"
+        content="Duniacoder.com, Duniacoder adalah website yang dibuat 
+        karena iseng dan kurang kerjaan, web yang di buat Bismantaka Aldila 
+        dan 4 Temanya ini bisa dikatakan sebagai laporan OJT periode pertama dan 
+        ajang kegabutan yang sebenarnya, Bismantaka Aldila sendiri membuat website ini 
+        dengan tujuan agar domain yang diberikan pembimbingnya tidak sia-sia dan dapat digunakan kembali">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://code.jquery.com/jquery-3.4.1.js"
         integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
